[package]
name = "sporm"
version = "0.1.0"
authors = [
    "Jovansonlee Cesar <ivanceras@gmail.com>",
    "Mike Tang <miketang84@outlook.com>" 
]
license = "MIT"
description = "An easy to use ORM for rust"
readme = "README.md"
repository = "https://github.com/sappworks/sporm"
documentation = "https://github.com/sappworks/sporm"
keywords = ["orm", "database", "sql"]

[lib]
name = "sporm"

[features]
default = ["mysql"]
sqlite = ["rusqlite","r2d2_sqlite"]

[dependencies.chrono]
version = "0.2.16"
#features = ["rustc-serialize"]

[dependencies.postgres]
version = "0.10.1"
#features = ["time", "uuid", "chrono", "rustc-serialize"]

[dependencies.serde_json]
git = "https://github.com/serde-rs/json.git"

[dependencies]
#rustc-serialize = "0.3.16"
serde = "0.7.0"
#serde_json = "0.7.0"
serde_macros = "0.7.0"
uuid = "0.1.18"
log = "0.3.4"
env_logger = "0.3.2"
regex = "0.1.44"
url = "0.2"
time = "0.1.34"
r2d2 = "0.6.1"
r2d2_postgres = "0.9.3"
rusqlite = { version = "0.6.0", optional = true }
mysql = {version = "1.2.0", optional = true }

[dependencies.r2d2_sqlite]
version = "0.0.4"
optional = true
